# mlops-titanic

./: Dockerfile  README.md  main.py  preprocess.py  pyproject.toml  test.py  train.py
.github/workflows/: ml-pipeline.yml
