[project]
name = "titanic"
version = "0.1.0"
description = "Titanic Survival Prediction ML Model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.8.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]
